updated models and views

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ gulp files updated-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.min.js"></script>
     <script type="x-mustache-template" id="game-row">
     <div id="row">
-        <h3>{{ position0 }}{{ position1 }}{{ position2 }}{{ position3 }}{{ indicator }}</h3>    
+        <h4>{{ turnNumber }}</h4>
+        <h3>{{ position0 }}{{ position1 }}{{ position2 }}{{ position3 }}</h3>
+        <h4>{{ pegs }}</h4>    
     </div>
     
     <script src="app.js"></script>
